# ocipkg

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  build.rs  crates.js  search-index.js  settings.html  source-files.js
.github/: FUNDING.yml  dependabot.yml  labels.yml  markdown-link-check.json  release.yml
.github/workflows/: cargo-ocipkg.yml  container.yml  examples.yml  gh-pages.yml  github-label-sync.yml  keep-a-changelog.yml  markdown-link-check.yml  ocipkg.yml  release.yml  rust-build.yml  rust.yml  version-updater.yml
cargo_ocipkg/: all.html  enum.Ocipkg.html  enum.Opt.html  fn.generate_image_name.html  fn.generate_oci_archive_filename.html  fn.get_build_dir.html  fn.get_metadata.html  fn.get_package.html  fn.get_revision.html  fn.main.html  index.html  sidebar-items.js
examples/cpp/lib/: .gitignore  CMakeLists.txt  lib.cpp
examples/dynamic/rust/exe/: Cargo.toml  README.md  build.rs
examples/dynamic/rust/lib/: Cargo.toml  README.md
examples/rust-exe/: Cargo.toml  build.rs
examples/rust-lib/: Cargo.toml
examples/rust/exe/: Cargo.toml  build.rs
examples/rust/lib/: Cargo.toml  README.md
examples/rust/lib/src/: lib.rs
examples/static-exe/: Cargo.toml
examples/static-exe/src/: main.rs
examples/static/rust/exe/: Cargo.toml  README.md
examples/static/rust/exe/src/: main.rs
implementors/clap/derive/: trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/traits/collect/: trait.FromIterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/ocipkg/image/platform/: trait.PlatformEx.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
ocipkg/: Cargo.toml  all.html  enum.Opt.html  fn.main.html  index.html  sidebar-items.js
ocipkg-cli/: Cargo.toml
ocipkg-cli/src/: lib.rs
ocipkg-exe-example/: Cargo.toml  build.rs
ocipkg-lib-example/: Cargo.toml
ocipkg-lib-example/src/: lib.rs
ocipkg/cross/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-musl
ocipkg/src/: digest.rs  error.rs  image_name.rs  lib.rs  media_types.rs  name.rs  oci_dir.rs  reference.rs
ocipkg/src/distribution/: auth.rs  client.rs  mod.rs  name.rs  reference.rs
ocipkg/src/image/: annotations.rs  artifact.rs  config.rs  layout.rs  mod.rs  oci_archive.rs  oci_artifact.rs  oci_dir.rs  read.rs  remote.rs  runnable.rs  write.rs
ocipkg/src/image/annotations/: flat.rs  mod.rs  nested.rs
ocipkg/src/local/: mod.rs
src/: compose.rs  config.rs  digest.rs  distribution.rs  error.rs  image.rs  image_name.rs  lib.rs  name.rs  reference.rs
src/cargo_ocipkg/: cargo-ocipkg.rs.html
src/distribution/: auth.rs  client.rs  mod.rs  name.rs  reference.rs
src/distribution/auth/: github.rs
src/image/: annotations.rs  image_configuration.rs  mod.rs  platform.rs  read.rs  write.rs
src/image/annotations/: flat.rs  nested.rs
src/local/: mod.rs
src/ocipkg/: digest.rs.html  error.rs.html  image_name.rs.html  lib.rs.html  ocipkg.rs.html
src/ocipkg/distribution/: auth.rs.html  client.rs.html  mod.rs.html  name.rs.html  reference.rs.html
src/ocipkg/image/: mod.rs.html  platform.rs.html  read.rs.html  write.rs.html
src/ocipkg/image/annotations/: flat.rs.html  mod.rs.html  nested.rs.html
src/ocipkg/local/: mod.rs.html
test/: fixture.sh
