[workspace]
members = ["ocipkg", "ocipkg-cli"]
exclude = ["examples/static-exe", "examples/rust/lib", "examples/rust/exe"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
base16ct = { version = "0.2.0", features = ["alloc"] }
base64 = "0.22.1"
cargo_metadata = "0.18.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
directories = "5.0.1"
env_logger = "0.11.8"
flate2 = "1.1.1"
git2 = "0.19.0"
goblin = "0.9.3"
lazy_static = "1.5.0"
log = "0.4.27"
maplit = "1.0.2"
oci-spec = "0.7.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.20.0"
toml = "0.8.22"
ureq = { version = "2.12.1", features = ["json"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
