[workspace]
members = ["ocipkg", "ocipkg-cli"]
exclude = ["examples/static-exe", "examples/rust/lib", "examples/rust/exe"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.99"
base16ct = { version = "0.2.0", features = ["alloc"] }
base64 = "0.22.1"
cargo_metadata = "0.18.1"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
directories = "5.0.1"
env_logger = "0.11.8"
flate2 = "1.1.2"
git2 = "0.19.0"
goblin = "0.9.3"
lazy_static = "1.5.0"
log = "0.4.27"
maplit = "1.0.2"
oci-spec = "0.7.1"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.21.0"
toml = "0.8.23"
ureq = { version = "2.12.1", features = ["json"] }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
