[workspace]
members = ["ocipkg", "ocipkg-cli"]
exclude = ["examples/static-exe", "examples/rust/lib", "examples/rust/exe"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
base16ct = { version = "0.3.0", features = ["alloc"] }
base64 = "0.22.1"
cargo_metadata = "0.21.0"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
env_logger = "0.11.8"
flate2 = "1.1.4"
git2 = "0.20.2"
goblin = "0.10.3"
lazy_static = "1.5.0"
log = "0.4.28"
maplit = "1.0.2"
oci-spec = "0.8.3"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
toml = "0.9.8"
ureq = { version = "2", features = ["json"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
