[package]
name = "ocipkg-cli"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.3.9"
edition = "2021"
description = "CLI for ocipkg"
documentation = "https://docs.rs/ocipkg-cli"
repository = "https://github.com/termoshtt/ocipkg"
readme = "../README.md"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
cargo_metadata = "0.18.1"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
flate2 = "1.0.30"
git2 = "0.18.3"
log = "0.4.21"
oci-spec = "0.6.5"
serde_json = "1.0.117"
tar = "0.4.41"
url = "2.5.1"

[dependencies.ocipkg]
version = "0.3.9"
path = "../ocipkg"

[[bin]]
name = "ocipkg"
doc = false # To avoid overwriting documents for ocipkg library

[[bin]]
name = "cargo-ocipkg"
