[package]
name = "ocipkg-cli"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.3.10"
edition = "2021"
description = "CLI for ocipkg"
documentation = "https://docs.rs/ocipkg-cli"
repository = "https://github.com/termoshtt/ocipkg"
readme = "../README.md"

[dependencies]
anyhow.workspace = true
base64.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
flate2.workspace = true
git2.workspace = true
log.workspace = true
oci-spec.workspace = true
serde_json.workspace = true
tar.workspace = true
url.workspace = true

[dependencies.ocipkg]
version = "0.3.10"
path = "../ocipkg"

[[bin]]
name = "ocipkg"
doc = false     # To avoid overwriting documents for ocipkg library

[[bin]]
name = "cargo-ocipkg"
