[package]
name = "ocipkg-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI for ocipkg"
documentation = "https://docs.rs/ocipkg-cli"

[dependencies]
anyhow.workspace = true
base64.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
flate2.workspace = true
git2.workspace = true
log.workspace = true
oci-spec.workspace = true
serde_json.workspace = true
tar.workspace = true
url.workspace = true

[dependencies.ocipkg]
version = "0.4.0"
path = "../ocipkg"

[[bin]]
name = "ocipkg"
doc = false     # To avoid overwriting documents for ocipkg library

[[bin]]
name = "cargo-ocipkg"
