[package]
name = "ocipkg"
version = "0.3.10"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OCI registry for package distribution"
documentation = "https://docs.rs/ocipkg"
repository = "https://github.com/termoshtt/ocipkg"
readme = "../README.md"

[dependencies]
anyhow = "1.0.89"
base16ct = { version = "0.2.0", features = ["alloc"] }
base64 = "0.22.1"
chrono = "0.4.38"
directories = "5.0.1"
flate2 = "1.0.33"
lazy_static = "1.5.0"
log = "0.4.22"
maplit = "1.0.2"
oci-spec = "0.7.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tar = "0.4.41"
toml = "0.8.19"
ureq = { version = "2.10.1", features = ["json"] }
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
maplit = "1.0.2"
tempfile = "3.12.0"
