[package]
name = "ocipkg"
version = "0.4.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OCI registry for package distribution"
documentation = "https://docs.rs/ocipkg"
repository = "https://github.com/termoshtt/ocipkg"
readme = "../README.md"

[dependencies]
anyhow.workspace = true
base16ct.workspace = true
base64.workspace = true
chrono.workspace = true
directories.workspace = true
flate2.workspace = true
lazy_static.workspace = true
log.workspace = true
maplit.workspace = true
oci-spec.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
toml.workspace = true
ureq.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
maplit.workspace = true
tempfile.workspace = true
