[package]
name = "ocipkg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "OCI registry for package distribution"
documentation = "https://docs.rs/ocipkg"

[features]
default = ["remote"]
remote = ["dep:ureq"]

[dependencies]
anyhow.workspace = true
base16ct.workspace = true
base64.workspace = true
chrono.workspace = true
directories.workspace = true
flate2.workspace = true
goblin.workspace = true
lazy_static.workspace = true
log.workspace = true
maplit.workspace = true
oci-spec.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
toml.workspace = true
ureq = { workspace = true, optional = true }
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
maplit.workspace = true
tempfile.workspace = true
